--- a/META.yml
+++ b/META.yml
@@ -6,6 +6,7 @@ build_requires:
   Cwd: '0'
   File::Basename: '0'
   File::Copy: '0'
+  File::Spec: '0'
   Test::More: '0'
 configure_requires:
   Module::Build: '0.42'
@@ -19,19 +20,21 @@ name: File-Takeput
 provides:
   File::Takeput:
     file: lib/File/Takeput.pm
-    version: '0.11'
+    version: '0.2'
   File::Takeput::Unix:
     file: lib/File/Takeput/Unix.pm
   File::Takeput::Win32:
     file: lib/File/Takeput/Win32.pm
 requires:
   Cwd: '0'
+  Exporter: '0'
   Fcntl: '0'
   File::Basename: '0'
+  Scalar::Util: '0'
   Time::HiRes: '0'
 resources:
   bugtracker: https://github.com/spragl/Takeput/issues
   license: http://apache.org/licenses/LICENSE-2.0
   repository: https://github.com/spragl/Takeput
-version: '0.11'
+version: '0.2'
 x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
